Sat Sep  1 00:29:33 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Changed the silc_id_create_client_id to be collision
	  resistant.  It is now assured that there cannot be created
	  two same client ID's.  I suspect that some weird bugs in 
	  the server were actually caused by duplicate Client IDs.
	  Affected file silcd/serverid.[ch].  A router receiving
	  new ID now also assures and informs the sending server
	  if the ID caused collision.

	* Changed the silc_id_create_channel_id to also assure that
	  there are no collisions.

Wed Aug 29 17:55:01 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Statement about ignoring the Mutual Authentication flag when
	  performing rekey with PFS was a bit misleading.  It is ignored
	  if it was set in the initial negotiation, it cannot be even
	  set in the rekey.  Fixed in the ke-auth draft.  Started the
	  new versions of the protocol drafts in the doc/.

Sun Aug 26 14:59:15 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a bug in silc_client_command_identify_save when saving
	  new channel information.  The channel name was no duplicated
	  and caused crash on exit.  Affected file is
	  lib/silcclient/command_reply.c.

Fri Aug 17 23:07:45 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the getkey command handling in the server.  Send just
	  empty OK reply to the sender if the key could not be fetched
	  (but everything else was ok, like the key just was not available).
	  Changed the public key parameter to optional in the protocol
	  specs so that empty OK reply can be sent.  Affected file
	  silcd/command.c.

	  Added a message to Irssi SILC client to tell to user if the
	  server did not return a public key.

Tue Aug 14 07:29:27 CEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a channel key regeneration bug.  It registered new
	  timeout tasks exponentially until all system resources were
	  used.  Affected file silcd/server.c.
