@@ -1,3 +1,9 @@
+Sun Sep  2 17:17:24 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed WIN32 configuration in the ./configure script.
+	  Fixed to include xti.h on environments that has it.
+	  Patches by Carsten Ilchmann and andrew.
+
 Sat Sep  1 00:29:33 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Changed the silc_id_create_client_id to be collision
